# HEXAR_project

./: .gitignore  .pdm-python  app.py  database_dialog_window.py  database_manager.py  design.ui  limited_table_model.py  main.py  plot_manager.py  ports.py  pyproject.toml  reader.py  select_table_dialog.ui
db_generator/: db_generator.py
